--- a/vendas.html
+++ b/vendas.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-  <h1>Página de vendas</h1>
+  <h1>Vendas</h1>
+  <p>Vendas = R$ 70000,00</p>
   <a href="index.html">ir para a página home</a>
 </body>
 
